// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 2`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 3`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 4`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 5`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 6`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other bad origin events 7`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x15000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > chill other > chill other events 1`] = `
[
  {
    "data": {
      "stash": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > force apply validator commission > force apply min commission events 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 600000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > modify validator count > increase validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > modify validator count > scale validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > modify validator count > set validator count bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with bad origin > events when setting invulnerables with bad staking admin origin 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": "BadOrigin",
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with bad origin > set invulnerables events with bad signed origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > alice funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 5000000000000,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > balances slash events 1`] = `[]`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > bob funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > charlie funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999739445778,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > base staking tests > set invulnerables with root origin > staking slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "staker": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    },
    "method": "Slashed",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set minimum validator commission > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set staking configs > set staking configs bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 7000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > set staking configs > set staking configs event 1`] = `
{
  "event": {
    "data": [
      {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000)",
          "refTime": "(rounded 300000000)",
        },
      },
    ],
    "index": "0x0000",
  },
  "phase": {
    "applyExtrinsic": 0,
  },
  "topics": [],
}
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > chill events 1`] = `
[
  {
    "data": {
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Chilled",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > events when attempting to nominate a blocked validator 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x14000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > kick events 1`] = `
[
  {
    "data": {
      "nominator": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Kicked",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > nominator bond extra events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > unbond events 1`] = `
[
  {
    "data": {
      "amount": 50000000000000,
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Unbonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validate (blocked) events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": true,
        "commission": "0.00%",
      },
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 0 bond events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 0 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "13piny9qppZ5hvZyxpbRiDDGFLa1rwqHkqxe5iDLQ7TXGdnM",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 1 bond events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "stash": "15KNQmEzwTTVzdDqa1ox9VaWSASEcboQHDLoiXbXDnwnZVzn",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 1 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "15KNQmEzwTTVzdDqa1ox9VaWSASEcboQHDLoiXbXDnwnZVzn",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 2 bond events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "stash": "13H7FnvuDAYZWhvRzJuNDd1Jrdm91bnWBuD9dqN1HJZAeNt9",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > staking lifecycle > validator 2 validate events 1`] = `
[
  {
    "data": {
      "prefs": {
        "blocked": false,
        "commission": "0.00%",
      },
      "stash": "13H7FnvuDAYZWhvRzJuNDd1Jrdm91bnWBuD9dqN1HJZAeNt9",
    },
    "method": "ValidatorPrefsSet",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > base staking tests > test force unstaking of nominator > force unstake bad origin events 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > trying to become a validator with no bonded funds fails > events when attempting to validate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > base staking tests > trying to nominate with no bonded funds fails > events when attempting to nominate with no bonded funds 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x00000000",
          "index": 7,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 20000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > fast unstake > test fast unstake > nominator bond events 1`] = `
[
  {
    "data": {
      "amount": 100000000000000,
      "stash": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Bonded",
    "section": "staking",
  },
]
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as admin > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as admin > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as admin > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as root > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as root > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash as root > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 10000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > cancel deferred slash with bad origin > cancel deferred slash events with bad origin 1`] = `
[
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 80000)",
          "refTime": "(rounded 2000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > alice funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 5000000000000,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > alice funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 97499867589258,
  "frozen": 0,
  "reserved": 2500000000000,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > balances slash events 1`] = `[]`;

exports[`Polkadot Staking > slashing tests > unapplied slash > bob funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > bob funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 97499867589258,
  "frozen": 0,
  "reserved": 2500000000000,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > charlie funds post slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 89999867589258,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > charlie funds pre slash 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 97499867589258,
  "frozen": 0,
  "reserved": 2500000000000,
}
`;

exports[`Polkadot Staking > slashing tests > unapplied slash > staking slash events 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "staker": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "Slashed",
    "section": "staking",
  },
  {
    "data": {
      "amount": 10000000000000,
      "staker": "1TUmpQQUiXWobQcoUMcqxbAuw6PW9KQaKAZe3bjv3fFaWSy",
    },
    "method": "Slashed",
    "section": "staking",
  },
]
`;
